--- a/app/src/main/res/layout/sender_name.xml
+++ b/app/src/main/res/layout/sender_name.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sender_name"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Medium Text"
-    android:textStyle="bold"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="5dp"
-    android:padding="2dp"
-    android:textColor="#4d4d4d"
-    />
+    android:paddingEnd="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingStart="16dp"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/sender_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="name"/>
+
+    <TextView
+        android:id="@+id/sub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="sub"/>
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="date"/>
+
+</LinearLayout>
